<resources>
    <string name="app_name" translatable="false">Trivia App</string>
    <string name="game_over" translatable="false">Game Over</string>
    <string name="try_again" translatable="false">Try Again?</string>
    <string name="position" translatable="false">Position</string>
    <string name="select_an_avatar" translatable="false">Select an Avatar</string>
    <string name="android_trivia" translatable="false">Android Trivia</string>
    <string name="about_text" translatable="false">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.\n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="rules_text" translatable="false">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="rules" translatable="false">Rules</string>
    <string name="about" translatable="false">About</string>
    <string name="trivia_hint" translatable="false">Trivia Hint</string>
    <string name="title_android_trivia_question" translatable="false">Android Trivia (%1$d/%2$d)</string>
    <string name="title_about_trivia" translatable="false">About Trivia</string>
    <string name="title_trivia_rules" translatable="false">Trivia Rules</string>
    <string name="share_success_text" translatable="false">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button" translatable="false">Submit</string>
    <string name="congratulations" translatable="false">Congratulations!</string>
    <string name="share" translatable="false">Share</string>
    <string name="sharing_not_available" translatable="false">Sharing Not Available</string>
    <string name="play_string">Play</string>
    <string name="main_logo">main logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_image">question image</string>
    <string name="next_match">Next Match</string>
</resources>
