<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.example.triviaapp.TitleFragment"
        android:label="@string/android_trivia">
        <action
            android:id="@+id/action_titleFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.example.triviaapp.GameFragment"
        android:label="Quiz"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_gameWonFragment"
            app:destination="@id/gameWonFragment"
            app:popUpTo="@id/gameFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_gameFragment_to_gameLoseFragment"
            app:destination="@id/gameLoseFragment"
            app:popUpTo="@id/gameFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/gameLoseFragment"
        android:name="com.example.triviaapp.GameLoseFragment"
        android:label="@string/game_over"
        tools:layout="@layout/fragment_game_lose">
        <action
            android:id="@+id/action_gameLoseFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:popUpTo="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameWonFragment"
        android:name="com.example.triviaapp.GameWonFragment"
        android:label="@string/congratulations"
        tools:layout="@layout/fragment_game_won">
        <action
            android:id="@+id/action_gameWonFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:popUpTo="@id/titleFragment" />
        <argument
            android:name="total_ques"
            app:argType="integer" />
        <argument
            android:name="correct_ques"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.triviaapp.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/rulesFragment"
        android:name="com.example.triviaapp.RulesFragment"
        android:label="@string/rules"
        tools:layout="@layout/fragment_rules" />
</navigation>